# PyTEI

./: .buildinfo  README.md  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  pytei.html  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree  modules.doctree  pytei.doctree
.github/workflows/: documentation.yml  publish.yml
_modules/: index.html
_modules/pytei/: client.html  model.html  store.html
_sources/: pytei.rst.txt
docs/: conf.py  index.rst  modules.rst
src/pytei/: __init__.py  client.py  store.py
