[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pytei"
version = "0.0.2"
authors = [
    { name="Daniel Gomm", email="daniel.gomm@cwi.nl" },
]
description = "Minimal wrapper for Hugging Face's Text Embeddings Inference."
readme = "README.md"
requires-python = ">=3.5"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "duckdb==1.1.3",
    "requests==2.32.3",
    "numpy==2.2.1"
]
license = "MIT"

[project.urls]
Homepage = "https://github.com/daniel-gomm/PyTEI"
Issues = "https://github.com/daniel-gomm/PyTEI/issues"
Documentation = "https://daniel-gomm.github.io/PyTEI/"